# rbx-asset-uploader

./: .cursorrules  .env.local.example  .gitignore  .vercelignore  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
app/: layout.tsx  page.tsx
app/api/codegen/: route.ts
app/api/experiment/oauth-upload/: route.ts
app/api/experiment/upload/: route.ts
app/api/export/: route.ts
app/api/group-profiles/: route.ts
app/api/groups/: route.ts
app/api/lockfile/: route.ts
app/api/operation/: route.ts
app/api/projects/: route.ts
app/api/projects/[id]/places/: route.ts
app/api/studio/place/: route.ts
app/api/studio/poll/: route.ts
app/api/studio/push/: route.ts
app/api/studio/register/: route.ts
app/api/studio/sessions/: route.ts
app/api/studio/tree/: route.ts
app/api/update/: route.ts
app/api/upload/: route.ts
app/api/user-apikey/: route.ts
app/experiment/: page.tsx
app/login/: page.tsx
app/settings/: page.tsx
components/: DropZone.tsx  FileList.tsx  ProjectSelect.tsx
docs/: DEBUG.md  spec.md
lib/: asset-types.ts  auth-guard.ts  auth.ts  codegen.ts  crypto.ts  roblox-api.ts  studio-state.ts
prisma/: schema.prisma
prisma/migrations/20260307134249_init/: migration.sql
scripts/: debug.sh  smoke-test.sh
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: codegen.rs  commands.rs  keystore.rs  lib.rs  lockfile.rs  main.rs  server.rs  upload.rs
src-tauri/src/api/: client.rs  types.rs
studio-plugin/: AssetUploaderBridge.server.lua
