[package]
name = "rbx-asset-uploader"
version = "0.1.0"
description = "Roblox Asset Bulk Uploader"
authors = ["shinji"]
edition = "2021"

[lib]
name = "rbx_asset_uploader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["multipart", "json", "stream"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
axum = "0.8"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
